# DVIDE

./: CMakeLists.txt  LICENSE  README.md
models/: CMakeLists.txt  main.cu  test_beam.cu  test_bikeWheel.cu  test_compaction.cu  test_contact.cu  test_draft.cu  test_edge.cu  test_hub.cu  test_hubMesh.cu  test_hubMeshBounce.cu  test_hubMeshLat.cu  test_hubMeshLoad.cu  test_hubMeshSoil.cu  test_oneBall.cu  test_plate.cu  test_plateMesh.cu  test_shear.cu  test_tireMesh.cu  test_twoPlate.cu
src/: ANCFApi.h  ANCFConstraints.cu  ANCFContact.cu  ANCFSystem.cu  ANCFSystem.cuh  ANCFintForce.cu  APGD.cu  APGD.cuh  Beam.cu  Beam.cuh  Body.cuh  Body2D.cu  Body2D.cuh  CollisionDetector.cu  CollisionDetector.cuh  Constraint.cuh  DanVIApi.h  Element.cuh  JKIP.cu  JKIP.cuh  Node.cuh  PDIP.cu  PDIP.cuh  PGJ.cu  PGJ.cuh  PGS.cu  PGS.cuh  PJKIP.cu  PJKIP.cuh  Particle.cuh  PhysicsItem.cuh  Plate.cu  Plate.cuh  Solver.cu  Solver.cuh  System.cu  System.cuh  SystemElastic.cu  TPAS.cu  TPAS.cuh  (+2 more)
